# bin2llvm

./: .gitignore  .travis.yml  AUTHORS  README.md  bin2llvm.py
Dockerfiles/: Dockerfile  Dockerfile.release  Dockerfile.stage0  Dockerfile.stage1  file-list
examples/: ls-example
harvesting-passes/: ARMGetThumbBit.cpp  ARMGetThumbBit.h  ExtractPossibleTargetsPass.cpp  ExtractPossibleTargetsPass.h  JumpTableInfo.cpp  JumpTableInfo.h  PrintCPUOffsets.cpp  PrintCPUOffsets.h  RecursiveDescentDisassembler.cpp  RecursiveDescentDisassembler.h  S2EExtractAndBuildPass.cpp  (+8 more)
postprocess/: CMakeLists.txt  README.md
postprocess/linker/: CMakeLists.txt  main.cpp
postprocess/translator/: .gitignore  ARMDumpThumbBit.cpp  ARMDumpThumbBit.h  ARMMarkCall.cpp  ARMMarkCall.h  ARMMarkJumps.cpp  ARMMarkJumps.h  ARMMarkReturn.cpp  ARMMarkReturn.h  BuildFunctions.cpp  BuildFunctions.h  CMakeLists.txt  FixOverlappedBBs.cpp  FixOverlappedBBs.h  FixOverlaps.cpp_  FixOverlaps.h_  FunctionRename.cpp  FunctionRename.h  InternalizeGlobals.cpp  InternalizeGlobals.h  LoadViaGlobalAliasReplace.cpp  LoadViaGlobalAliasReplace.h  MarkFuncEntry.cpp  MarkFuncEntry.h  MetaUtils.cpp  MetaUtils.h  PassUtils.cpp  PassUtils.h  PcUtils.cpp  PcUtils.h  RemoveBranchTrace.cpp  RemoveBranchTrace.h  RemoveExtraStoreToPC.cpp  RemoveExtraStoreToPC.h  ReplaceConstantLoads.cpp  ReplaceConstantLoads.h  S2EARMMergePcThumbPass.cpp  S2EARMMergePcThumbPass.h  S2EDeleteInstructionCount.cpp  S2EDeleteInstructionCount.h  (+8 more)
postprocess/translator/mem-ops-testing/: Makefile  README  mem-ops-testing.c  mem-ops-testing.h
(+69 files in other folders)
